--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -1,20 +1,38 @@
-<nav class="navbar navbar-white navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header page-scroll col-md-3 col-sm-3">
-            <a class="navbar-brand" href="/"><%= t('name') %></a>
-        </div>
-        <div class="navbar-header page-scroll col-md-8 col-sm-8">
-            <form class="search-nav">
-                <input type="text" name="" placeholder="🔍 Pesquise por cursos...">
-            </form>
-        </div>
-        <div class="navbar-header page-scroll col-md-1 col-sm-1">
-           <ul>
-                <li style="margin: 20%;">
-                    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> 
-                    </a>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    
+    <!-- Logo -->
+    <div class="navbar-header">
+        <a class="navbar-brand" href="/"><i class="fa fa-skull"></i>Codeskull</a>
+    </div>
+    
+    <!-- Options -->
+    <ul class="nav navbar-right top-nav">
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= current_user.fullname %><b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="/users/edit"><i class="fa fa-fw fa-user"></i> Profile</a>
+                </li>
+                <li class="divider"></li>
+                <li>
+                    <%= link_to(destroy_user_session_path, :method => :delete) do %>
+                        <i class="fa fa-fw fa-power-off"></i> Log Out
+                    <% end %> 
                 </li>
             </ul>
-        </div>  
+        </li>
+    </ul>
+     
+    <!-- Side menu -->
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav side-nav">
+            <li>
+                <a href="/"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+            </li>
+            <li>
+                <a href="/tracks/new"><i class="fa fa-fw fa-plus"></i> Cadastrar cursos</a>
+            </li>  
+        </ul>
     </div>
+            
 </nav>
