--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head>  
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,11 +8,17 @@
     <meta name="author" content="">
     <%= csrf_meta_tags %>
     <title>Dashboard</title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %> 
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   </head>
-  <body id="page-top" class="index">
-    <%= render 'dashboard/navbar' %>
-  	<%= yield %>
-  	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <body>
+    <div id="wrapper">
+      <%= render 'dashboard/navbar' %>
+      <div id="page-wrapper">
+        <div class="container-fluid">
+         <%= yield %>
+        </div>
+      </div>
+    </div>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </body>
 </html>
