--- a/app/views/tracks/edit.html.erb
+++ b/app/views/tracks/edit.html.erb
@@ -1,30 +1,34 @@
-<div class="form-view">
-	<section>
-		<div class="container">
-			<div class="row">
-				<h2>Editar curso</h2>
-				<hr/>
-				<%= form_for(track ,:html => { :multipart => true }) do |f| %>
-					<div class="form-group">
-				    	<%= f.label :title %><br />
-				    	<%= f.text_field :title, autofocus: true, class: 'form-control' %>
-					</div>
-					<div class="form-group">
-				    	<%= f.label :description %><br/>
-				    	<%= f.text_area :description, autofocus: true, class: 'form-control' %>
-					</div>
-					<div class="form-group">
-						<%= f.label :contents %><br/>
-						<%= file_field_tag "attachments[]", type: :file, multiple: true %>
-					</div>
-					<div class="form-group">
-						<%= render partial: "contents/edit", locals: { contents: @track.contents } %>
-					</div>
-					<div class="form-group">
-						<input type="submit" value="Enviar" class="btn btn-default" />
-					</div>
-				<% end %>
+<div class="row">
+	<div class="col-lg-12">
+	<h2>Editar curso</h2>
+		<hr/>
+		<%= form_for(track ,:html => { :multipart => true }) do |f| %>
+			<div class="form-group">
+		    	<%= f.label :title %><br />
+		    	<%= f.text_field :title, autofocus: true, class: 'form-control' %>
 			</div>
-		</div>
-	</section>
+			<div class="form-group">
+		    	<%= f.label :description %><br/>
+		    	<%= f.text_area :description, autofocus: true, class: 'form-control', rows: '10'  %>
+			</div>
+			<div class="form-group">
+				<%= f.label :contents %><br/>
+				<%= file_field_tag "attachments[]", type: :file, multiple: true %>
+			</div>
+			<div class="form-group">
+				<%= f.label :language %><br />
+				<%= f.select(:language, collection: Track.languages.keys.to_a.map { |e| [e.humanize, e] }) %>
+			</div>
+			<div class="form-group">
+				<%= f.label :idiom %><br />
+				<%= f.select(:idiom, collection: Track.idioms.keys.to_a.map { |e| [t(e), e] }) %>
+			</div>
+			<div class="form-group">
+				<%= render partial: "contents/edit", locals: { contents: @track.contents } %>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Enviar" class="btn btn-default" />
+			</div>
+		<% end %>
+	</div>
 </div>
