--- a/app/views/welcome/_navbar.html.erb
+++ b/app/views/welcome/_navbar.html.erb
@@ -1,30 +1,17 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"><%= t('name') %></a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li>
-                    <a href="/about"><%= t('about') %></a>
-                </li>
-                <li>
-                    <a href="https://github.com/alvarocantador/codeskull" target="_blank"><%= t('contribute') %></a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <!--<div class="container-fluid">-->
+    <div class="navbar-header">
+        <a class="navbar-brand" href="/"><%= t('name') %></a>
     </div>
-    <!-- /.container-fluid -->
+    <ul class="nav navbar-right top-nav">
+        <li class="hidden">
+             <a href="#page-top"></a>
+        </li>
+        <li>
+            <a href="/about"><%= t('about') %></a>
+        </li>
+        <li>
+            <a href="https://github.com/alvarocantador/codeskull" target="_blank"><%= t('contribute') %></a>
+        </li>
+    </ul>
 </nav>
