Added support to new grades

--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -32,6 +32,9 @@
             <li>
                 <a href="/tracks/new"><i class="fa fa-fw fa-plus"></i> Cadastrar cursos</a>
             </li>  
+            <li>
+                <a href="/users/me/grades"><i class="fa fa-fw fa-book"></i> Minhas grades</a>
+            </li>  
         </ul>
     </div>
             
