--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="cold-sm-12">
-		<h1>Cadastrar tarefas</h1>
+		<h1>Editar tarefas</h1>
 		<hr/>
 		<%= render partial: 'form', locals: { task: task, track: track } %>
 	</div>
