--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,31 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Grades</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Track</th>
-      <th>Finished</th>
-      <th>Finished at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @grades.each do |grade| %>
-      <tr>
-        <td><%= grade.track %></td>
-        <td><%= grade.finished %></td>
-        <td><%= grade.finished_at %></td>
-        <td><%= link_to 'Show', grade %></td>
-        <td><%= link_to 'Edit', edit_grade_path(grade) %></td>
-        <td><%= link_to 'Destroy', grade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">Minhas grades</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+  <% if grades.any? %>
+    <% grades.each do |grade| %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <%= grade.track.title %>
+        </div>
+        <div class="panel-body">
+          X % concluído <%= grade.finished %>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Grade', new_grade_path %>
+  <% else %>
+    <h3>Você ainda não iniciou nenhum curso!</h3>
+  <% end %>
+  </div>
+</div>
