--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -25,7 +25,7 @@
 
 		<%= form_for([current_user, Grade.new]) do |f| %>
 			<input type="hidden" name="grade[track_id]" value="<%= track.id %>">
-			<input type="submit" class="btn btn-primary btn-large grade-button" style="width: 100%">INICIAR CURSO</input>
+			<input type="submit" class="btn btn-primary btn-large grade-button" style="width: 100%" value="Iniciar"></input>
 		<% end %>
 		
 
