--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,18 +1,21 @@
-<div class="row">
-	<div class="col-sm-4">
-		<h3><%= task.title %></h3>
-		<p><%= task.content %></p>
-		<hr/>
-		<a href="#" class="btn btn-info">ANTERIOR</a>
+<%= form_for([current_user, grade, activity]) do |f| %>
+	<div class="row">
+		<div class="col-sm-4">
+			<h3><%= task.title %></h3>
+			<p><%= task.content %></p>
+			<hr/>
+			<a href="#" class="btn btn-info">ANTERIOR</a>
+		</div>
+		<div class="col-sm-4">
+			<input type="hidden" id="snippet" value="<%= task.snippet %>"/>
+			<%= f.text_area :source_code, 'data-lang' => track.language, rows: '20' %>
+			<!--<textarea style="width: 100%;" data-lang="<%= track.language %>" rows="20"><%= task.snippet %></textarea>-->
+			<hr/>
+			<%= f.submit 'ENVIAR', :class => 'btn btn-default' %>
+		</div>
+		<div class="col-sm-4">
+			<textarea style="width: 100%" rows="20">Console output</textarea>
+			<hr/>
+		</div>
 	</div>
-	<div class="col-sm-4">
-		<textarea style="width: 100%;" data-lang="<%= track.language %>" rows="20"><%= task.snippet %></textarea>
-		<hr/>
-		<a href="#" class="btn btn-default" style="width: 100%;">ENVIAR</a>
-	</div>
-	<div class="col-sm-4">
-		<textarea style="width: 100%" rows="20">Console output</textarea>
-		<hr/>
-		<a href="#" class="btn btn-info" style="float: right;" >PRÓXIMO</a>
-	</div>
-</div>
+<% end %>
