--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -21,11 +21,13 @@
 				</ul>
 			<% end %>
 		<% end %>
-		<hr/>
 
-		<%= form_for([current_user, Grade.new]) do |f| %>
-			<input type="hidden" name="grade[track_id]" value="<%= track.id %>">
-			<input type="submit" class="btn btn-primary btn-large grade-button" style="width: 100%" value="Iniciar"></input>
+		<% unless current_user.coursing?(track) %>
+			<hr/>
+			<%= form_for([current_user, Grade.new]) do |f| %>
+				<input type="hidden" name="grade[track_id]" value="<%= track.id %>">
+				<input type="submit" class="btn btn-primary btn-large grade-button" style="width: 100%" value="Iniciar"></input>
+			<% end %>
 		<% end %>
 		
 
