--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
 	<div class="col-md-6">
+		
 		<div>
 			<h1><%= track.title %></h1>
 			<p>
@@ -10,6 +11,7 @@
 			<p class="text-justify"><%= track.description %></p>
 		</div>
 		<hr/>
+
 		<h3>Ementa - <%= track.tasks.count %> tarefa(s)</h3>
 		<% Task.categories.each do |category| %>
 			<% if track.tasks_of(category[0])&.any? %>
@@ -29,31 +31,40 @@
 				<input type="submit" class="btn btn-primary btn-large grade-button" style="width: 100%" value="Iniciar"></input>
 			<% end %>
 		<% end %>
-		
-
 
 		<% if policy(track).update? %>
-			<hr/>
-		  <%= link_to edit_track_path(track) do %>
+		  <hr/>
+		  <%= link_to edit_track_path(track), class: 'btn btn-primary' do %>
 		   	<i class="fa fa-pencil"></i> <%= t(:edit) %>
 		  <% end %>
-		  <%= link_to track_tasks_path(track) do %>
+		  <%= link_to track_tasks_path(track), class: 'btn btn-primary' do %>
 		   	<i class="fa fa-plus"></i> <%= t(:create_task) %>
 		  <% end %>
 		<% end %>
+
 	</div>
-	<div col-md-6>
+
+	<div class="col-md-6">
 		<% if track.contents.any? %>
 		<div>
 			<h3>Conteúdos</h3>
 			<div class="row">
 				<% track.contents.each do |content|%>
-					<a href="<%= content.file.url %>" data-toggle="lightbox" data-gallery="multiimages" data-title="<%= content.file.name %>" class="col-sm-1 thumb">
-                                    <img src="<%= content.file.url(:thumb) %>" class="img-responsive">
-                    </a>
+					<a href="<%= content.file.url %>" data-toggle="lightbox" data-gallery="multiimages" data-title="<%= content.file.name %>" class="col-sm-3 thumb"><img src="<%= content.file.url(:thumb) %>" class="img-responsive"></a>
                 <% end %>
             </div>
+            <hr/>
         </div>
         <% end %>
+        <div class="row">
+        	<div class="col-md-12">
+         		<h3>Estatistícas:</h3>
+	        	<ul>
+	        		<li><%= track.users_started %> pessoas já iniciaram esse curso</li>
+	        		<li><%= track.users_finished %> pessoas concluiram o curso</li>
+	        	</ul>
+        	</div>
+        </div>
 	</div>
+
 </div>
