--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -12,7 +12,11 @@
   </head>
   <body>
     <div id="wrapper">
-      <%= render 'dashboard/navbar' %>
+      <% if user_signed_in? %>
+        <%= render 'dashboard/navbar' %>
+      <% else %>
+        <%= render 'welcome/navbar' %>
+      <% end %>
       <div id="page-wrapper">
         <div class="container-fluid">
          <%= yield %>
