--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,9 +1,12 @@
 <div class="row">
-	<div class="col-lg-12">
-		<h1 class="page-header">Pesquise por cursos:</h1>
-		<div class="form-group">
-			<input id="search-field" type="text" placeholder="e.g. Ruby, C#, .NET..." class="form-control" />	
-		</div>
+	<div class="col-lg-6">
+		<h1>Pesquise por cursos:</h1>
+		<div class="input-group">
+	      <span class="input-group-btn">
+	       <a href="#" class="btn btn-primary"><i class="fa fa-search"></i></a>
+	      </span>
+	      <input id="search-field" type="text" placeholder="e.g. Ruby, C#, .NET..." class="form-control" />
+	    </div>
 	</div>
 </div>
 <hr/>
