--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,21 +1,32 @@
 <%= form_for([current_user, grade, activity]) do |f| %>
 	<div class="row">
 		<div class="col-sm-4">
-			<h3><%= activity.task.title %></h3>
-			<p><%= activity.task.content %></p>
-			<hr/>
-			<a href="#" class="btn btn-info">ANTERIOR</a>
+			<div class="activity-box">
+				<h3><%= activity.task.title %></h3>
+				<p><%= activity.task.content %></p>
+			</div>
 		</div>
 		<div class="col-sm-4">
 			<input type="hidden" id="snippet" value="<%= activity.task.snippet %>"/>
 			<%= f.text_area :source_code, 'data-lang' => track.language, rows: '20' %>
 			<!--<textarea style="width: 100%;" data-lang="<%= track.language %>" rows="20"><%= activity.task.snippet %></textarea>-->
-			<hr/>
-			<%= f.submit 'ENVIAR', :class => 'btn btn-default' %>
 		</div>
 		<div class="col-sm-4">
-			<textarea style="width: 100%" rows="20">Console output</textarea>
-			<hr/>
+			<div class="activity-box">
+				<textarea class="console" rows="22">C:\></textarea>
+			</div>
+		</div>
+	</div>
+	<hr/>
+	<div class="row">
+		<div class="col-sm-4">
+			<a href="#" class="btn btn-info" style="float: left;" disabled>ANTERIOR</a>
+		</div>
+		<div class="col-sm-4">
+			<%= f.submit 'ENVIAR', :class => 'btn btn-primary', :style => 'width: 100%;' %>
+		</div>
+		<div class="col-sm-4">
+			<a href="#" class="btn btn-info" style="float: right;" disabled>PRÓXIMO</a>
 		</div>
 	</div>
 <% end %>
