--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,7 +9,7 @@
 	</div>
 	<div class="form-group">
     	<%= f.label :content %><br/>
-    	<%= f.text_area :content, class: 'form-control' %>
+    	<%= f.text_area :content, class: 'form-control', rows: '15' %>
 	</div>
 	<div class="form-group">
     	<%= f.label :snippet %><br/>
