--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,10 @@
 <div class="row">
-	<div class="cold-sm-12">
-		<h1>Cadastrar tarefas</h1>
-		<hr/>
+	<div class="col-lg-12">
+		<h1 class="page-header">Cadastrar tarefas</h1>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-12">
 		<%= render partial: 'form', locals: { task: task, track: track } %>
 	</div>
 </div>
