Fixed some expectations form bug

--- a/app/views/expectations/_form.html.erb
+++ b/app/views/expectations/_form.html.erb
@@ -27,13 +27,14 @@
 		<div class="col-md-1">
 			<div class="form-group">
 				<label> </label>
-				<button type="submit" class="form-control btn btn-primary"><i class="fa fa-edit"></i></button>
+				<button alt="Editar" type="submit" class="form-control btn btn-success"><i class="fa fa-check"></i></button>
 			</div>
 		</div>
 		<div class="col-md-1">
 			<div class="form-group">
 				<label> </label>
-				<button type="submit" class="form-control btn btn-warning"><i class="fa fa-check"></i></button>
+				<!-- link to delete -->
+				<button alt="Excluir" type="submit" class="form-control btn btn-danger"><i class="fa fa-times"></i></button>
 			</div>
 		</div>
 	</div>
