--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -14,12 +14,11 @@
 	<input type="hidden" id="track_id" value="<%= track.id %>" />
 	<div class="row">
 		<div class="col-md-12">
-			<h3>Expectations <button id="expectation-form-new" class="btn btn-default">
+			<h3>Expectativas <button id="expectation-form-new" class="btn btn-primary btn-xs">
 				<i class="fa fa-plus"></i>
 			</button></h3>
 		</div>
-		<div id="expectation-form" class="col-md-12">
-			
-		</div>
+		<div id="expectation-form" class="col-md-12"></div>
 	</div>
 </div>
+<hr/>
