--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -8,12 +8,12 @@
 		</div>
 		<div class="col-sm-4">
 			<input type="hidden" id="snippet" value="<%= activity.task.snippet %>"/>
-			<%= f.text_area :source_code, 'data-lang' => track.language, rows: '20' %>
+			<%= f.text_area :source_code, rows: '20', data: { 'lang' => track.language } %>
 			<!--<textarea style="width: 100%;" data-lang="<%= track.language %>" rows="20"><%= activity.task.snippet %></textarea>-->
 		</div>
 		<div class="col-sm-4">
 			<div class="activity-box">
-				<textarea class="console" rows="22">C:\></textarea>
+				<textarea class="console" rows="22"><%= activity.console %></textarea>
 			</div>
 		</div>
 	</div>
