--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,19 +1,24 @@
 <%= form_for([current_user, grade, activity]) do |f| %>
 	<div class="row">
-		<div class="col-sm-4">
+		<div class="col-sm-3">
 			<div class="activity-box">
 				<h3><%= activity.task.title %></h3>
 				<p><%= activity.task.content %></p>
 			</div>
 		</div>
-		<div class="col-sm-4">
-			<input type="hidden" id="snippet" value="<%= activity.task.snippet %>"/>
-			<%= f.text_area :source_code, rows: '20', data: { 'lang' => track.language } %>
-			<!--<textarea style="width: 100%;" data-lang="<%= track.language %>" rows="20"><%= activity.task.snippet %></textarea>-->
+		<div class="col-sm-5">
+			<%= render partial: "code/editor", locals: { form: f, snippet:  activity.task.snippet, language: track.language } %>
 		</div>
 		<div class="col-sm-4">
 			<div class="activity-box">
-				<textarea class="console" rows="22"><%= activity.console %></textarea>
+				<%= render partial: "code/console", locals: { form: f, rows: 11 } %>
+				<hr/>
+				<h4>Expectativas</h4>
+				<ul>
+					<% activity.task.expectations.each do |expectation| %>
+						<li><%= expectation.to_text %></li>
+					<% end %>
+				</ul>
 			</div>
 		</div>
 	</div>
