--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -27,14 +27,25 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav side-nav">
             <li>
-                <a href="/"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                <a href="/"><i class="fa fa-fw fa-dashboard"></i>&nbsp;&nbsp;Dashboard</a>
             </li>
             <li>
-                <a href="/tracks/new"><i class="fa fa-fw fa-plus"></i> Cadastrar cursos</a>
+                <a href="/tracks/new"><i class="fa fa-fw fa-plus"></i>&nbsp;&nbsp;Cadastrar cursos</a>
             </li>  
             <li>
-                <a href="/users/me/grades"><i class="fa fa-fw fa-book"></i> Minhas grades</a>
-            </li>  
+                <a href="/users/me/grades"><i class="fa fa-fw fa-book"></i>&nbsp;&nbsp;Minhas grades</a>
+            </li>
+            <li>
+                <a href="javascript:;" data-toggle="collapse" data-target="#demo" class="" aria-expanded="true"><i class="fa fa-fw fa-terminal"></i>&nbsp;&nbsp;Sandbox</a>
+                <ul id="demo" class="collapse in" aria-expanded="true">
+                    <li>
+                        <a href="/sandbox/ruby"><i class="fa fa-fw fa-diamond"></i>&nbsp;&nbsp;Ruby</a>
+                     </li>
+                    <li>
+                        <a href="/sandbox/java"><i class="fa fa-fw fa-coffee"></i>&nbsp;&nbsp;Java</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </div>
             
